# FinKernel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  SKILL.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
config/: host-agent-mcp-http.example.json  host-agent-mcp-http.local.json  host-agent-mcp-stdio.example.json  host-agent-mcp-stdio.local.json  persona-profiles.example.json  persona-profiles.json
docs/: PRD.md  README.en.md  README.md  README.zh-CN.md  future-module-development-rules.md  host-agent-runtime-integration.md  investment-conversation-routing.md  local-file-storage-lite.md  mcp-inspector.md  operator-control-plane.md  persona-agent-workflow.md  persona-profiles.md  profile-agent-workflow.md  profile-data-model.md  profile-discovery-architecture.md  profile-discovery-confidence-coverage.md  profile-discovery-interpretation-contract.md  profile-draft-source-contract.md  profile-schema-design.md  setup-and-run.md  troubleshooting.md  upper-layer-agent-integration.md
examples/: advisor-strategy.json  broker_connector_skeleton.py  channel_connector_skeleton.py  create-strategy-from-text.json  simulate-trade.json  submit-limit-order.json
prompts/: discovery_answer_extractor.md  discovery_question_generator.md  finkernel_system_routing.md  persona_analyzer.md  persona_assessment.md  persona_builder.md  persona_correction.md  persona_merger.md  profile_analyzer.md  profile_assessment.md  profile_builder.md  profile_correction.md  profile_merger.md  profile_narrative_builder.md
scripts/: bootstrap-lite.ps1  bootstrap-local.ps1  bootstrap.ps1  e2e-create-strategy-from-text.ps1  e2e-healthcheck.ps1  (+11 more)
(+58 files in other folders)
